# Agent-RS

./: .gitignore  Agent-RS 项目介绍.docx  CLAUDE.md  README.md  docker-compose.yml  package.json
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py  server.py
backend/app/agent/: __init__.py  ai_service.py  capability_registry.py  child.py  config.py  domain_agents.py  errors.py  geocode.py  imagery_access.py  intent_policy.py  llm_planner.py  memory_judge.py  normalizer.py  persistence.py  plan_validator.py  provider.py  reasoning.py  request_builder.py  rerank.py  router.py  routing.py  runtime.py  safety_policy.py  search_agent.py  search_planner.py  stream.py  tool_guards.py  tool_jobs.py  tool_registry.py  tool_selector.py  types.py
backend/app/api/: deps.py
backend/app/auth/: __init__.py  current_conversation.py  current_user.py  invites.py  security.py  session.py  throttle.py
backend/app/core/: __init__.py  logging.py  paths.py  settings.py
backend/app/db/: __init__.py  errors.py  pool.py  sanitize.py  sqlite_pool.py  vector.py
backend/app/documents/: __init__.py  chunker.py  parser.py  task_registry.py
backend/app/mcp/: __init__.py  client.py  concurrency.py  ndvi_client.py  rs_tools_client.py
backend/app/schemas/: chat.py  config.py  error.py
backend/app/services/: chat_service.py
backend/app/shared/: logging.py  paths.py  (+1 more)
backend/scripts/: admin_bootstrap.py  verify_rag.py
backend/sql/: apply.py  sqlite_schema.sql
backend/tests/: conftest.py  db_isolation.py  test_db_isolation.py  test_shared_paths.py
(+525 files in other folders)
