[project]
name = "chatbot-backend"
version = "0.1.0"
description = "Python FastAPI backend for an OpenAI-compatible chatbot."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "jinja2>=3.1.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "openai>=1.40.0",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0"
]

[project.scripts]
chatbot-backend = "app.server:main"

[tool.setuptools.package-data]
"app.lib.ai.prompting.templates" = ["*.jinja", "README.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
